FullQa New/src/Prodly Moover/objects/Deployment_Plan_Item__c.object
<CustomObject>
    <description>Encapsulate a data set to be deployed as part of a step.</description>
    <fields>
        <fullName>DataSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specifies the data set to deploy.</inlineHelpText>
        <label>Data Set</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DataSet__c.Root__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DataSet__c</referenceTo>
        <relationshipLabel>Deployment Plan Items</relationshipLabel>
        <relationshipName>Deployment_Plan_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Plan_Step_Order_Number__c</fullName>
        <formula>Deployment_Plan_Step__r.Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Plan Step Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Plan_Step__c</fullName>
        <inlineHelpText>Specifies the deployment plan step to which this item belongs.</inlineHelpText>
        <label>Deployment Plan Step</label>
        <referenceTo>Deployment_Plan_Step__c</referenceTo>
        <relationshipLabel>Deployment Plan Items</relationshipLabel>
        <relationshipName>Deployment_Plan_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deployment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Plan</label>
        <referenceTo>Deployment_Plan__c</referenceTo>
        <relationshipLabel>Deployment Plan Items</relationshipLabel>
        <relationshipName>Deployment_Plan_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_Item__c</fullName>
        <formula>HYPERLINK(Id,&apos;View Item&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Item</label>
        <type>Text</type>
    </fields>
    <label>Deployment Plan Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Deployment Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>